# mem-first-web-agent

./: .env.example  .gitignore  README.md  SUMMARY.md  docker-compose.yml  main.py  memory_agent_design.md  pyproject.toml  requirements.txt
src/: __init__.py
src/agent/: __init__.py  graph.py  nodes.py  state.py
src/llm/: __init__.py  analytics.py  base.py  conversation.py
src/memory/: __init__.py  embedder.py  redis_client.py  vector_search.py
src/security/: __init__.py  guardrails.py
src/utils/: __init__.py  chunker.py  config.py  logger.py
src/web/: __init__.py  converter.py  fetcher.py  search_provider.py  tavily_search.py
tests/integration/: test_memory_hit.py  test_memory_miss.py
tests/unit/: test_chunker.py  test_embedder.py  test_guardrails.py  test_redis_client.py
